add landing page, and fix responsiveness

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
+@import "tailwindcss";
 #root {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
@@ -39,4 +38,13 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
